--- a/CSS/layout/_adjustment.scss
+++ b/CSS/layout/_adjustment.scss
@@ -11,17 +11,30 @@
 
 .section {
     height: 100%;
+    width: 100%;
     background-color: rgba(0,0,0,0.31);
-    min-width: 1100px;
-    min-height: 650px;
+    // max-width: 1100px;
+    // max-height: 650px;
+
 }
 
 .container {
-    width: 1100px;
-    height: 650px;
+    width: 100%;
+    max-width: 1100px;
+    // max-height: 650px;
+    height: 100%;
     margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    overflow: hidden;
+
+    @include tablets {
+        width: 95%;
+    }
+
+    @include phones {
+        width: 95%;
+    }
 }
