--- a/CSS/layout/_base.scss
+++ b/CSS/layout/_base.scss
@@ -1,3 +1,15 @@
+html {
+    font-size: 16px;
+
+    @include tablets {
+        font-size: rem(15px);
+  }
+
+    @include phones {
+        font-size: rem(13px);
+    }
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -14,7 +26,9 @@ body {
 }
 
 body, html {
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
+    // overflow: hidden;
 }
 
 ul {
