--- a/CSS/section/style-order.scss
+++ b/CSS/section/style-order.scss
@@ -1,10 +1,12 @@
-.order-bg {
-    background:  url("../IMG7/order-texture.png") no-repeat center center,
+.order {
+        background:  url("../IMG7/order-texture.png") no-repeat center center,
                 #000000 url("../IMG7/order-bg.png") no-repeat center center;
     background-size: cover, cover;
-    // position: relative;
     height: 100%;
     width: 100%;
+}
+
+.order-bg {
     justify-content: flex-start;
 }
 
@@ -15,46 +17,70 @@
     margin: 0;
     margin-bottom: rem(60px);
     margin-top: rem(65px);
+
+    @include tablets {
+        margin-top: rem(110px);
+    }
 }
 
 .orderform {
     width: 86%;
-    min-width: 950px;
+    max-width: rem(950px);
     display: flex;
     color: #ffffff;
     font-family: ubuntulight;
     font-size: 14px;
+    display: flex;
+
+    @include tablets {
+        flex-direction: column;
+        padding: 0 rem(80px);
+        margin-top: rem(20px);
+    }
 
     &__left {
         display: flex;
         flex-flow: column nowrap;
         justify-content: flex-start;
-        border: 1px solid yellow;
         width: 50%;
-        margin-right: 20px;
+        margin-right: rem(20px);
+
+        @include tablets {
+        width: 100%;
+        }
     } 
 
     &__right {
-        border: 1px solid yellow;
         width: 50%;
         display: flex;
         flex-flow: column nowrap;
+
+        @include tablets {
+        width: 100%;
+        align-items: left;
+        }
     }
 }
 
 .orderform__row {
     display: flex;
-    margin-bottom: 20px;
+    margin-bottom: rem(20px);
+
+    @include tablets {
+        margin-bottom: rem(25px);
+    }
+
     &_textarea {
         flex-flow: column nowrap;
-        // margin-top: 5px;
+        width: 100%;
+        min-height: rem(110px);
+        height: 45%;
     }
 }
 
 .orderform__item {
     width: 100%;
-    margin-right: 20px;
-    // margin-top: 5px;
+    margin-right: rem(20px);
     flex: 1;
 
     &:last-child {
@@ -64,19 +90,18 @@
 
 .orderform__field {
     width: 100%;
-    // min-width: 100px;
-    height: 35px;
+    height: rem(35px);
     border: none;
-    border-radius: 5px;
-    padding: 5px;
+    border-radius: rem(5px);
+    padding: rem(5px);
     }
 
 .orderform__textarea {
     width: 100%;
-    min-width: 460px;
-    min-height: 110px;
+    // max-width: rem(460px);
+    min-height: rem(110px);
     height: 45%;
-    border-radius: 5px;
+    border-radius: rem(5px);
 }
 
 
@@ -85,18 +110,18 @@
 
     &_checkbox {
         position: relative;
-        width: 15px;
-        height: 15px;
+        width: rem(15px);
+        height: rem(15px);
         background-color: #fff;
     }
 
     &_radio {
         position: relative;
-        width: 15px;
-        height: 15px;
+        width: rem(15px);
+        height: rem(15px);
         background-color: #fff;
         border-radius: 50%;
-        margin-right: 5px;
+        margin-right: rem(5px);
     }
 
     
@@ -110,7 +135,7 @@
 }
 
 .orderform__switch-label {
-        margin-right: 20px;
+        margin-right: rem(20px);
     }
 
 .orderform__switch:checked + .orderform__switch_checkbox::before {
@@ -118,15 +143,15 @@
     display: block;
     position: absolute;
 
-    top: 0px;
-    right: 2px;
-    bottom: 2px;
-    left: 3px;
+    top: rem(0px);
+    right: rem(2px);
+    bottom: rem(2px);
+    left: rem(3px);
     
-    width: 7px;
-    height: 12px;
-    border-right: 3px solid #e45028;
-    border-bottom: 3px solid #e45028;
+    width: rem(7px);
+    height: rem(12px);
+    border-right: rem(3px) solid #e45028;
+    border-bottom: rem(3px) solid #e45028;
     transform: rotate(45deg);
 }
 
@@ -135,10 +160,10 @@
     display: block;
     position: absolute;
 
-    top: 4px;
-    right: 4px;
-    bottom: 4px;
-    left: 4px;
+    top: rem(4px);
+    right: rem(4px);
+    bottom: rem(4px);
+    left: rem(4px);
 
     background: #e45028;
     border-radius: 50%;
@@ -150,6 +175,6 @@
     background: transparent;
     color: #ffffff;
     font-family: ubuntulight;
-    font-size: 14px;
-    margin-left: 15px;
+    font-size: rem(14px);
+    margin-left: rem(15px);
 }
