--- a/CSS/section/style-webest.scss
+++ b/CSS/section/style-webest.scss
@@ -1,14 +1,25 @@
-.webest-bg {
-background: url(../IMG2/cheese-dip.png) no-repeat left 25px, 
-            url(../IMG2/seeds.png) no-repeat left 190px, 
-            url(../IMG2/tomato-slices.png) no-repeat 56px bottom, 
+.webest {
+    background: url(../IMG2/cheese-dip.png) no-repeat left rem(25px), 
+            url(../IMG2/seeds.png) no-repeat left rem(190px), 
+            url(../IMG2/tomato-slices.png) no-repeat rem(56px) bottom, 
             url(../IMG2/tomato.png) no-repeat right bottom, 
             url(../IMG2/cheese-lists.png) no-repeat right bottom, 
-            url(../IMG2/lettuce.png) no-repeat right 53px, 
+            url(../IMG2/lettuce.png) no-repeat right rem(53px), 
             url(../IMG2/wood.png) no-repeat;
     background-size: auto,auto,auto,auto,auto,auto, cover;
     width: 100%;
     height: 100%;
+
+    @include phones {
+    background: url(../IMG2/tomato-slices.png) no-repeat left bottom, 
+            url(../IMG2/tomato.png) no-repeat right bottom, 
+            url(../IMG2/cheese-lists.png) no-repeat right bottom, 
+            url(../IMG2/wood.png) no-repeat;
+    background-size: auto,auto,auto,auto,auto,auto, cover;
+    }
+}
+
+.webest-bg {
     justify-content: flex-start;
 }
 
@@ -23,26 +34,56 @@ background: url(../IMG2/cheese-dip.png) no-repeat left 25px,
     margin-bottom: rem(60px);
     margin-top: rem(55px);
     }
+
+    @include tablets {
+        margin-top: rem(55px);
+    }
 }
 
 .webest-content {
     display: flex;
-    margin: 0px 90px;
+    margin: rem(0px) rem(90px);
     justify-content: space-between;
     align-items: baseline;
-    justify-content: flex-start;
+    // justify-content: flex-start;
+
+    @include tablets {
+        margin: rem(100px) rem(30px);
+    }
+
+    @include phones {
+        flex-direction: column;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        margin: 0;
+    }
 }
 
 .bestpoint {
-    width: 285px;
+    // max-width: rem(285px);
+    width: 30%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: baseline;
-    margin-left: 40px;
+    margin-left: rem(40px);
+
+    @include tablets { 
+        margin-left: rem(10px);
+    }
+    
+    @include phones {
+        flex-direction: row;
+        justify-content: flex-start;
+        width: 100%;
+        min-width: 100px;
+        margin-left: 0;
+        align-items: stretch;
+    }
+
 
     &:first-child {
-        margin-left: 0px;
+        margin-left: rem(0px);
     }
 }
 
@@ -67,6 +108,17 @@ background: url(../IMG2/cheese-dip.png) no-repeat left 25px,
         height: 75px;
         fill: #8ac03e;
         }
+    
+    @include tablets {
+        margin-bottom: rem(25px);
+    }
+
+    @include phones {
+        // width: 40%;
+        width: rem(120px);
+        margin: 0;
+        margin-right: 10px;
+    }
 }
 
 .bestpoint__icon {
@@ -76,13 +128,19 @@ background: url(../IMG2/cheese-dip.png) no-repeat left 25px,
 
 .bestpoint__content {
     text-align: center;
+
+    @include phones {
+        text-align: left;
+        width: 70%;
+    }
 }
 
 .bestpoint__title {
+        margin: 0;
         font-family: lifehackmedium;
-        font-size: 24px;
+        font-size: rem(24px);
         color: #2f3234;
-        line-height: 28px;
+        line-height: rem(28px);
 
 }
 
@@ -90,9 +148,13 @@ background: url(../IMG2/cheese-dip.png) no-repeat left 25px,
 
     p { 
         font-family: ubuntulight;
-        font-size: 14px;
+        font-size: rem(14px);
         color: #6d6d6c
         }
+
+    // @include phones {
+        
+    // }
 }
 
 
