--- a/CSS/section/style-feedback.scss
+++ b/CSS/section/style-feedback.scss
@@ -6,18 +6,13 @@
     display: flex;
     flex-wrap: wrap;
 
-
     width: 100%;
-    // min-width: rem(1100px);
     height: 100%;
-    // min-height: rem(650px);
 
 }
 
 .opinion__img {
-    // min-width: rem(275px);
     width: 25%;
-    // min-height: rem(325px);
     height: 50%;
     position: relative;
     filter: grayscale(1);
@@ -31,10 +26,15 @@
         background-repeat: no-repeat;
         }
 
+
     &:hover {
         .opinion__content {
             display: block;
             background-color: rgba(#000000, 0.5);
+            
+                    @include phones {
+                        display: none;
+                    }
             }
         }
     }
@@ -59,6 +59,8 @@
     @include tablets {
         text-align: center;
     }
+
+
 }
 
 .opinion__title {
