--- a/CSS/main.css
+++ b/CSS/main.css
@@ -164,6 +164,10 @@ a {
       .header__left {
         margin-left: 0.625rem;
         margin-top: 0.9375rem; } }
+    @media screen and (max-width: 480px) {
+      .header__left {
+        margin-left: 0.9375rem;
+        margin-top: 1.5625rem; } }
   .header__middle {
     margin-top: 0.375rem;
     margin-right: 0.9375rem; }
@@ -187,8 +191,8 @@ a {
         margin-top: 1.25rem; } }
 
 .logo {
-  width: 5.75rem;
-  height: 4.3125rem; }
+  width: 92px;
+  height: 69px; }
 
 .logo__pic {
   width: 100%;
@@ -227,10 +231,10 @@ a {
   display: inline-block;
   background-color: #e45028;
   border: none;
-  border-radius: 0.3125rem;
+  border-radius: 5px;
   text-align: center;
   vertical-align: middle;
-  padding: 0.625rem 1rem;
+  padding: 10px 16px;
   text-transform: uppercase;
   font-family: ubuntumedium;
   color: #ffffff;
@@ -324,6 +328,10 @@ a {
       padding: 0;
       margin-left: 0;
       margin-top: 5.0625rem;
+      height: 100%; } }
+  @media screen and (max-width: 768px) {
+    .greeting__burger {
+      margin-top: 3.75rem;
       height: 100%; } }
 
 .greeting__image {
@@ -419,7 +427,7 @@ a {
   @media screen and (max-width: 480px) {
     .webest {
       background: url(../IMG2/tomato-slices.png) no-repeat left bottom, url(../IMG2/tomato.png) no-repeat right bottom, url(../IMG2/cheese-lists.png) no-repeat right bottom, url(../IMG2/wood.png) no-repeat;
-      background-size: auto,auto,auto,auto,auto,auto, cover; } }
+      background-size: auto,auto, auto, cover; } }
 
 .webest-bg {
   -webkit-box-pack: start;
@@ -445,9 +453,15 @@ a {
     margin: 0;
     margin-bottom: 3.75rem;
     margin-top: 3.4375rem; }
+    @media screen and (max-width: 480px) {
+      .webest-header__words {
+        font-size: 50px; } }
   @media screen and (max-width: 768px) {
     .webest-header {
       margin-top: 3.4375rem; } }
+  @media screen and (max-width: 480px) {
+    .webest-header {
+      margin-top: 0rem; } }
 
 .webest-content {
   display: -webkit-box;
@@ -522,7 +536,8 @@ a {
       -webkit-box-align: stretch;
       -webkit-align-items: stretch;
       -ms-flex-align: stretch;
-      align-items: stretch; } }
+      align-items: stretch;
+      margin-bottom: 3.125rem; } }
   .bestpoint:first-child {
     margin-left: 0rem; }
 
@@ -545,9 +560,9 @@ a {
       margin-bottom: 1.5625rem; } }
   @media screen and (max-width: 480px) {
     .bestpoint__img {
-      width: 7.5rem;
+      width: 9.375rem;
       margin: 0;
-      margin-right: 10px; } }
+      margin-right: 1.25rem; } }
 
 .bestpoint__icon {
   width: 100%;
@@ -563,13 +578,13 @@ a {
 .bestpoint__title {
   margin: 0;
   font-family: lifehackmedium;
-  font-size: 1.5rem;
+  font-size: 24px;
   color: #2f3234;
-  line-height: 1.75rem; }
+  line-height: 28px; }
 
 .bestpoint__text p {
   font-family: ubuntulight;
-  font-size: 0.875rem;
+  font-size: 14px;
   color: #6d6d6c; }
 
 .team {
@@ -623,12 +638,19 @@ a {
     .teammates__title {
       margin-left: 0;
       margin-top: 6.25rem; } }
+  @media screen and (max-width: 480px) {
+    .teammates__title {
+      font-size: 50px;
+      margin-top: 4.0625rem; } }
 
 .teammates__accordeon {
   margin: 0rem 5rem; }
   @media screen and (max-width: 768px) {
     .teammates__accordeon {
       margin-top: 3.4375rem; } }
+  @media screen and (max-width: 480px) {
+    .teammates__accordeon {
+      margin: 1.875rem 1.875rem 0; } }
 
 .teammates__item {
   display: -webkit-box;
@@ -651,7 +673,7 @@ a {
   margin: 0;
   display: inline-block;
   font-family: gagalinregular;
-  font-size: 0.875rem;
+  font-size: 14px;
   font-weight: 400;
   color: #ffffff;
   display: -webkit-box;
@@ -676,6 +698,11 @@ a {
       font-size: 24px;
       line-height: 28px;
       padding: 1.25rem 0rem; } }
+  @media screen and (max-width: 768px) {
+    .teammates__name {
+      font-size: 24px;
+      line-height: 28px;
+      padding: 0.9375rem 0rem; } }
 
 .teammates__desc {
   display: -webkit-box;
@@ -695,12 +722,15 @@ a {
       -webkit-align-items: center;
       -ms-flex-align: center;
       align-items: center; } }
+  @media screen and (max-width: 480px) {
+    .teammates__desc {
+      margin-top: 0.9375rem; } }
 
 .teammates__foto {
   width: 25%;
   height: 25%;
-  max-width: 6.25rem;
-  max-height: 6.25rem;
+  max-width: 100px;
+  max-height: 100px;
   margin-left: 0.9375rem; }
 
 .teammates__teampic {
@@ -710,18 +740,21 @@ a {
 .teammates__text {
   width: 66%;
   color: #ffffff;
-  font-size: 0.875rem;
-  line-height: 1.5rem;
+  font-size: 14px;
+  line-height: 24px;
   font-family: ubuntulight;
   padding: 0rem 1.25rem; }
   @media screen and (max-width: 768px) {
     .teammates__text {
       text-align: center; } }
+  @media screen and (max-width: 480px) {
+    .teammates__text {
+      width: 90%; } }
 
 .teammates__job {
   margin: 0;
   font-family: ubuntubold;
-  font-size: 0.875rem; }
+  font-size: 14px; }
   @media screen and (max-width: 768px) {
     .teammates__job {
       text-align: center; } }
@@ -837,11 +870,11 @@ a {
   -ms-transform: rotate(-90deg);
   transform: rotate(-90deg);
   font-family: gagalinregular;
-  font-size: 2.5rem;
+  font-size: 40px;
   font-weight: 400;
   color: #ffffff;
-  width: 21.875rem;
-  height: 5.1875rem;
+  width: 350px;
+  height: 83px;
   line-height: 1;
   padding-top: 1.5625rem;
   text-align: center; }
@@ -849,7 +882,7 @@ a {
     .menu__name {
       vertical-align: middle;
       text-align: left;
-      margin-bottom: 10.625rem;
+      margin-bottom: 11.25rem;
       padding-top: 1.125rem; } }
 
 .menu__desc {
@@ -909,6 +942,9 @@ a {
   .opinion__img:hover .opinion__content {
     display: block;
     background-color: rgba(0, 0, 0, 0.5); }
+    @media screen and (max-width: 480px) {
+      .opinion__img:hover .opinion__content {
+        display: none; } }
   .opinion__img_2 {
     background-image: url("../IMG6/2x2.png");
     background-size: cover;
@@ -917,6 +953,9 @@ a {
   .opinion__img:hover .opinion__content {
     display: block;
     background-color: rgba(0, 0, 0, 0.5); }
+    @media screen and (max-width: 480px) {
+      .opinion__img:hover .opinion__content {
+        display: none; } }
   .opinion__img_3 {
     background-image: url("../IMG6/3x2.png");
     background-size: cover;
@@ -925,6 +964,9 @@ a {
   .opinion__img:hover .opinion__content {
     display: block;
     background-color: rgba(0, 0, 0, 0.5); }
+    @media screen and (max-width: 480px) {
+      .opinion__img:hover .opinion__content {
+        display: none; } }
   .opinion__img_4 {
     background-image: url("../IMG6/4x2.png");
     background-size: cover;
@@ -933,6 +975,9 @@ a {
   .opinion__img:hover .opinion__content {
     display: block;
     background-color: rgba(0, 0, 0, 0.5); }
+    @media screen and (max-width: 480px) {
+      .opinion__img:hover .opinion__content {
+        display: none; } }
   .opinion__img_5 {
     background-image: url("../IMG6/5x2.png");
     background-size: cover;
@@ -941,6 +986,9 @@ a {
   .opinion__img:hover .opinion__content {
     display: block;
     background-color: rgba(0, 0, 0, 0.5); }
+    @media screen and (max-width: 480px) {
+      .opinion__img:hover .opinion__content {
+        display: none; } }
   .opinion__img_6 {
     background-image: url("../IMG6/6x2.png");
     background-size: cover;
@@ -949,6 +997,9 @@ a {
   .opinion__img:hover .opinion__content {
     display: block;
     background-color: rgba(0, 0, 0, 0.5); }
+    @media screen and (max-width: 480px) {
+      .opinion__img:hover .opinion__content {
+        display: none; } }
   .opinion__img_7 {
     background-image: url("../IMG6/7x2.png");
     background-size: cover;
@@ -957,6 +1008,9 @@ a {
   .opinion__img:hover .opinion__content {
     display: block;
     background-color: rgba(0, 0, 0, 0.5); }
+    @media screen and (max-width: 480px) {
+      .opinion__img:hover .opinion__content {
+        display: none; } }
   .opinion__img_8 {
     background-image: url("../IMG6/8x2.png");
     background-size: cover;
@@ -965,6 +1019,9 @@ a {
   .opinion__img:hover .opinion__content {
     display: block;
     background-color: rgba(0, 0, 0, 0.5); }
+    @media screen and (max-width: 480px) {
+      .opinion__img:hover .opinion__content {
+        display: none; } }
   @media screen and (max-width: 768px) {
     .opinion__img {
       width: 50%;
@@ -997,10 +1054,10 @@ a {
 .opinion_btn {
   background-color: #2f3234;
   border: none;
-  border-radius: 0.3125rem;
+  border-radius: 5px;
   text-align: center;
   vertical-align: middle;
-  padding: 0.625rem 1rem;
+  padding: 10px 16px;
   text-transform: uppercase;
   font-family: ubuntumedium;
   color: #ffffff;
@@ -1025,7 +1082,8 @@ a {
   -webkit-box-pack: start;
   -webkit-justify-content: flex-start;
   -ms-flex-pack: start;
-  justify-content: flex-start; }
+  justify-content: flex-start;
+  width: 99%; }
 
 .order__title {
   font-family: gagalinregular;
@@ -1039,7 +1097,15 @@ a {
   margin-top: 4.0625rem; }
   @media screen and (max-width: 768px) {
     .order__title {
-      margin-top: 6.875rem; } }
+      margin-top: 6.875rem;
+      text-align: center; } }
+  @media screen and (max-width: 480px) {
+    .order__title {
+      font-size: 50px;
+      text-align: center;
+      margin-top: 2.8125rem;
+      width: 50%;
+      margin-bottom: 1.25rem; } }
 
 .orderform {
   width: 86%;
@@ -1061,6 +1127,11 @@ a {
       flex-direction: column;
       padding: 0 5rem;
       margin-top: 1.25rem; } }
+  @media screen and (max-width: 480px) {
+    .orderform {
+      width: 95%;
+      padding: 0 0;
+      margin-top: 0rem; } }
   .orderform__left {
     display: -webkit-box;
     display: -webkit-flex;
@@ -1098,6 +1169,14 @@ a {
         -webkit-align-items: left;
         -ms-flex-align: left;
         align-items: left; } }
+    @media screen and (max-width: 480px) {
+      .orderform__right {
+        width: 100%;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
+        margin-bottom: 20px; } }
 
 .orderform__row {
   display: -webkit-box;
@@ -1130,14 +1209,14 @@ a {
 
 .orderform__field {
   width: 100%;
-  height: 2.1875rem;
+  height: 35px;
   border: none;
-  border-radius: 0.3125rem;
-  padding: 0.3125rem; }
+  border-radius: 5px;
+  padding: 5px; }
 
 .orderform__textarea {
   width: 100%;
-  min-height: 6.875rem;
+  min-height: 110px;
   height: 45%;
   border-radius: 0.3125rem; }
 
@@ -1145,13 +1224,13 @@ a {
   display: none; }
   .orderform__switch_checkbox {
     position: relative;
-    width: 0.9375rem;
-    height: 0.9375rem;
+    width: 15px;
+    height: 15px;
     background-color: #fff; }
   .orderform__switch_radio {
     position: relative;
-    width: 0.9375rem;
-    height: 0.9375rem;
+    width: 15px;
+    height: 15px;
     background-color: #fff;
     border-radius: 50%;
     margin-right: 0.3125rem; }
@@ -1169,14 +1248,14 @@ a {
   content: "";
   display: block;
   position: absolute;
-  top: 0rem;
-  right: 0.125rem;
-  bottom: 0.125rem;
-  left: 0.1875rem;
-  width: 0.4375rem;
-  height: 0.75rem;
-  border-right: 0.1875rem solid #e45028;
-  border-bottom: 0.1875rem solid #e45028;
+  top: 0px;
+  right: 2px;
+  bottom: 2px;
+  left: 3px;
+  width: 7px;
+  height: 12px;
+  border-right: 3px solid #e45028;
+  border-bottom: 3px solid #e45028;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg); }
@@ -1185,10 +1264,10 @@ a {
   content: "";
   display: block;
   position: absolute;
-  top: 0.25rem;
-  right: 0.25rem;
-  bottom: 0.25rem;
-  left: 0.25rem;
+  top: 4px;
+  right: 4px;
+  bottom: 4px;
+  left: 4px;
   background: #e45028;
   border-radius: 50%; }
 
@@ -1223,9 +1302,25 @@ a {
   .footer__left {
     width: 50%;
     text-align: left; }
+    @media screen and (max-width: 480px) {
+      .footer__left {
+        width: 100%;
+        text-align: center; } }
   .footer__right {
     width: 50%;
     text-align: right; }
+    @media screen and (max-width: 480px) {
+      .footer__right {
+        width: 100%;
+        text-align: center; } }
+  @media screen and (max-width: 480px) {
+    .footer {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      height: 115px; } }
 
 .address {
   margin-left: 3.75rem; }
@@ -1234,8 +1329,8 @@ a {
       margin-left: 1.25rem; } }
 
 .address__place {
-  font-size: 0.875rem;
-  line-height: 1.5rem;
+  font-size: 14px;
+  line-height: 24px;
   font-family: ubuntulight;
   font-style: normal; }
 
