--- a/CSS/section/style-order.scss
+++ b/CSS/section/style-order.scss
@@ -8,6 +8,11 @@
 
 .order-bg {
     justify-content: flex-start;
+    width: 99%;
+    // @include phones {
+    //     align-items: center;
+    //     justify-content: center;
+    // }
 }
 
 .order__title {
@@ -20,6 +25,15 @@
 
     @include tablets {
         margin-top: rem(110px);
+        text-align: center;
+    }
+
+    @include phones {
+        font-size: 50px;
+        text-align: center;
+        margin-top: rem(45px);
+        width: 50%;
+        margin-bottom: rem(20px);
     }
 }
 
@@ -36,6 +50,12 @@
         flex-direction: column;
         padding: 0 rem(80px);
         margin-top: rem(20px);
+    }
+
+    @include phones {
+        width: 95%;
+        padding: 0 0;
+        margin-top: rem(0px);
     }
 
     &__left {
@@ -58,6 +78,12 @@
         @include tablets {
         width: 100%;
         align-items: left;
+        }
+
+        @include phones {
+        width: 100%;
+        align-items: center;
+        margin-bottom: 20px;
         }
     }
 }
@@ -90,18 +116,23 @@
 
 .orderform__field {
     width: 100%;
-    height: rem(35px);
+    height: 35px;
     border: none;
-    border-radius: rem(5px);
-    padding: rem(5px);
+    border-radius: 5px;
+    padding: 5px;
+    
     }
 
 .orderform__textarea {
     width: 100%;
     // max-width: rem(460px);
-    min-height: rem(110px);
+    min-height: 110px;
     height: 45%;
     border-radius: rem(5px);
+
+    @include phones {
+
+    }
 }
 
 
@@ -110,15 +141,15 @@
 
     &_checkbox {
         position: relative;
-        width: rem(15px);
-        height: rem(15px);
+        width: 15px;
+        height: 15px;
         background-color: #fff;
     }
 
     &_radio {
         position: relative;
-        width: rem(15px);
-        height: rem(15px);
+        width: 15px;
+        height: 15px;
         background-color: #fff;
         border-radius: 50%;
         margin-right: rem(5px);
@@ -143,15 +174,15 @@
     display: block;
     position: absolute;
 
-    top: rem(0px);
-    right: rem(2px);
-    bottom: rem(2px);
-    left: rem(3px);
+    top: 0px;
+    right: 2px;
+    bottom: 2px;
+    left: 3px;
     
-    width: rem(7px);
-    height: rem(12px);
-    border-right: rem(3px) solid #e45028;
-    border-bottom: rem(3px) solid #e45028;
+    width: 7px;
+    height: 12px;
+    border-right: 3px solid #e45028;
+    border-bottom: 3px solid #e45028;
     transform: rotate(45deg);
 }
 
@@ -160,10 +191,10 @@
     display: block;
     position: absolute;
 
-    top: rem(4px);
-    right: rem(4px);
-    bottom: rem(4px);
-    left: rem(4px);
+    top: 4px;
+    right: 4px;
+    bottom: 4px;
+    left: 4px;
 
     background: #e45028;
     border-radius: 50%;
