--- a/CSS/section/style-team.scss
+++ b/CSS/section/style-team.scss
@@ -44,6 +44,11 @@
         margin-left: 0;
         margin-top: rem(100px);
     }
+
+    @include phones {
+        font-size: 50px;
+        margin-top: rem(65px);
+    }
 }
 
 .teammates__accordeon {
@@ -53,6 +58,9 @@
         margin-top: rem(55px);
     }
     
+    @include phones {
+        margin: rem(30px) rem(30px) 0;
+    }
 }
 
 .teammates__item {
@@ -69,7 +77,7 @@
     margin: 0;
     display: inline-block;
     font-family: gagalinregular;
-    font-size: rem(14px);
+    font-size: 14px;
     font-weight: 400;
     color: #ffffff;
 
@@ -89,10 +97,14 @@
 
     @include tablets {
         font-size: 24px;
-        // padding-top: 0;
         line-height: 28px;
         padding: rem(20px) rem(0px);
+    }
 
+    @include tablets {
+        font-size: 24px;
+        line-height: 28px;
+        padding: rem(15px) rem(0px);
     }
 }
 
@@ -105,13 +117,17 @@
         flex-direction: column;
         align-items: center;
     }
+
+    @include phones {
+        margin-top: rem(15px);
+    }
 }
 
 .teammates__foto {
     width: 25%;
     height: 25%;
-    max-width: rem(100px);
-    max-height: rem(100px);
+    max-width: 100px;
+    max-height: 100px;
     margin-left: rem(15px);
 
 }
@@ -124,20 +140,24 @@
 .teammates__text {
     width: 66%;
     color: #ffffff;
-    font-size: rem(14px);
-    line-height: rem(24px);
+    font-size: 14px;
+    line-height: 24px;
     font-family: ubuntulight;
     padding: rem(0px) rem(20px);
 
     @include tablets {
         text-align: center;
     }
+
+    @include phones {
+        width: 90%;
+    }
 }
 
 .teammates__job {
     margin: 0;
     font-family: ubuntubold;
-    font-size: rem(14px);
+    font-size: 14px;
 
     @include tablets {
         text-align: center;
