--- a/CSS/config/_media.scss
+++ b/CSS/config/_media.scss
@@ -2,11 +2,24 @@
     @return $px / 16px+0rem;
 }
 
+@mixin transit {
+    @media screen and (max-width: $transit) {
+        @content;
+    }
+}
+
 @mixin tablets {
     @media screen and (max-width: $tablets) {
         @content;
     }
 }
+
+@mixin transit2 {
+    @media screen and (max-width: $transit2) {
+        @content;
+    }
+}
+
 
 @mixin phones {
     @media screen and (max-width: $phones) {
