--- a/CSS/section/style-greeting.scss
+++ b/CSS/section/style-greeting.scss
@@ -20,6 +20,8 @@
         margin-top: rem(13px);
         margin-right: auto;
 
+
+
         @include tablets {
             margin-left: rem(10px);
             margin-top: rem(15px);
@@ -171,6 +173,10 @@
     margin-top: rem(5px);
     // flex-basis: 50%;
     display: flex;
+
+    @include transit {
+        margin-left: rem(0px);
+        }
     
     @include tablets {
         width: 100%;
